--- a/projects/Tomato And IMDB compination Movie Search/Code/Movie Search/IMDB integration File.xaml
+++ b/projects/Tomato And IMDB compination Movie Search/Code/Movie Search/IMDB integration File.xaml
@@ -1,6 +1,7 @@
 <Activity mc:Ignorable="sap sap2010" x:Class="IMDB_integration_File" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="io_dicIdbmMovieData" Type="InOutArgument(scg:Dictionary(x:String, x:String))" />
+    <x:Property Name="in_strMovieName" Type="InOutArgument(x:String)" />
   </x:Members>
   <VisualBasic.Settings>
     <x:Null />
@@ -90,18 +91,13 @@
       <Variable x:TypeArguments="x:TimeSpan" Default="00:00:03" Name="tsRetryDeuration" />
       <Variable x:TypeArguments="x:String" Default="https://www.imdb.com" Name="strIMDBLink" />
       <Variable x:TypeArguments="x:Boolean" Name="boolNotFound" />
-      <Variable x:TypeArguments="x:String" Name="strMovieName">
-        <Variable.Default>
-          <Literal x:TypeArguments="x:String">super man</Literal>
-        </Variable.Default>
-      </Variable>
     </Flowchart.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
         <av:Size x:Key="ShapeSize">50,50</av:Size>
-        <av:Point x:Key="ShapeLocation">575,35</av:Point>
-        <av:PointCollection x:Key="ConnectorLocation">600,85 600,135</av:PointCollection>
+        <av:Point x:Key="ShapeLocation">575,5</av:Point>
+        <av:PointCollection x:Key="ConnectorLocation">600,55 600,155</av:PointCollection>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <Flowchart.StartNode>
@@ -110,9 +106,9 @@
     <FlowStep x:Name="__ReferenceID6">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <av:Point x:Key="ShapeLocation">545,135</av:Point>
+          <av:Point x:Key="ShapeLocation">545,155</av:Point>
           <av:Size x:Key="ShapeSize">110,70</av:Size>
-          <av:PointCollection x:Key="ConnectorLocation">600,205 600,255</av:PointCollection>
+          <av:PointCollection x:Key="ConnectorLocation">600,225 600,255</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB open - Invoke Workflow File (IMDB open.xaml)" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="IMDB open.xaml">
@@ -136,11 +132,11 @@
               <av:PointCollection x:Key="ConnectorLocation">600,325 600,355 600.3333333333334,355 600.3333333333334,370</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB Movie Search - Invoke Workflow File (IMDB Movie Search.xaml)" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="IMDB Movie Search.xaml">
+          <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB Movie Search - Invoke Workflow File (IMDB Movie Search.xaml)" sap:VirtualizedContainerService.HintSize="335.3333333333333,178" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="IMDB Movie Search.xaml">
             <ui:InvokeWorkflowFile.Arguments>
               <InArgument x:TypeArguments="x:Int32" x:Key="in_intNumberOfRetry">[intNumberOfRetry]</InArgument>
               <InArgument x:TypeArguments="x:TimeSpan" x:Key="in_tsRetryDeuration">[tsRetryDeuration]</InArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="in_strMovieName">[strMovieName]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_strMovieName">[in_strMovieName]</InArgument>
               <OutArgument x:TypeArguments="x:Boolean" x:Key="out_boolNotFound">[boolNotFound]</OutArgument>
             </ui:InvokeWorkflowFile.Arguments>
             <sap:WorkflowViewStateService.ViewState>
@@ -150,10 +146,7 @@
             </sap:WorkflowViewStateService.ViewState>
           </ui:InvokeWorkflowFile>
           <FlowStep.Next>
-            <FlowDecision x:Name="__ReferenceID1" DisplayName="Search Found" sap:VirtualizedContainerService.HintSize="60.666666666666664,60.666666666666664" sap2010:WorkflowViewState.IdRef="FlowDecision_1">
-              <FlowDecision.Condition>
-                <VisualBasicValue x:TypeArguments="x:Boolean" DisplayName="Visual basic value" ExpressionText="Not boolNotFound" />
-              </FlowDecision.Condition>
+            <FlowDecision x:Name="__ReferenceID1" Condition="[Not boolNotFound]" DisplayName="Search Found" sap:VirtualizedContainerService.HintSize="60.666666666666664,60.666666666666664" sap2010:WorkflowViewState.IdRef="FlowDecision_1">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -214,7 +207,13 @@
                               <av:Size x:Key="ShapeSize">110,70</av:Size>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;Movie Nam &quot;+io_dicIdbmMovieData(&quot;Movie Nam&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Releas Yeer &quot;+io_dicIdbmMovieData(&quot;Releas Yeer&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Movie Certificate &quot;+io_dicIdbmMovieData(&quot;Movie Certificate&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Deuration &quot;+io_dicIdbmMovieData(&quot;Deuration&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Rate &quot;+io_dicIdbmMovieData(&quot;Rate&quot;)+Environment.NewLine]" />
+                          <ui:CommentOut sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="CommentOut_1">
+                            <ui:CommentOut.Body>
+                              <Sequence DisplayName="Ignored Activities" sap2010:WorkflowViewState.IdRef="Sequence_1">
+                                <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;Movie Nam &quot;+io_dicIdbmMovieData(&quot;Movie Nam&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Releas Yeer &quot;+io_dicIdbmMovieData(&quot;Releas Yeer&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Movie Certificate &quot;+io_dicIdbmMovieData(&quot;Movie Certificate&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Deuration &quot;+io_dicIdbmMovieData(&quot;Deuration&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Rate &quot;+io_dicIdbmMovieData(&quot;Rate&quot;)+Environment.NewLine]" />
+                              </Sequence>
+                            </ui:CommentOut.Body>
+                          </ui:CommentOut>
                         </FlowStep>
                       </FlowStep.Next>
                     </FlowStep>
